# configy

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yml
src/: colors.rs  list.rs  main.rs  sync.rs
src/sync/: parse.rs  resolve.rs
